Etape 1.2 - Réalisation du filtre des travaux

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,6 +36,12 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class = filterbar>
+		<button class="filterbutton all-button">Tous</button>
+		<button class="filterbutton objects-button">Objets</button>
+		<button class="filterbutton appartments-button">Appartements</button>
+		<button class="filterbutton hotels-button">Hôtels & restaurants</button>
+		</div>
 		<div class="gallery">
 		</div>
 	</section>
