--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,7 +15,7 @@
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
+			<li><a href=index.html></a>projets</li>
 			<li>contact</li>
 			<li><a href=login.html>login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
