création de la modale 1 -Galerie Photo-

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -35,9 +35,10 @@
 	<section id="introduction">
 		<figure id ="introduction-image">
 			<img src="./assets/images/sophie-bluel.png" alt="">
-			<a class="editor-content edit-link" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
+			<a class="editor-content edit-link-a" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
 		</figure>
 		<article>
+			<a  class="editor-content edit-link-c" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
 			<h2>Designer d'espace</h2>
 			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
@@ -45,8 +46,7 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets<a  class="editor-content edit-link" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a></h2>
-		
+		<h2>Mes Projets<a  class="editor-content edit-link-b" href="#modal-container"><i class="fa-solid fa-pen-to-square"></i>Modifier</a></h2>
 		<div class = filterbar>
 		<button class="filterbutton all-button">Tous</button>
 		<button class="filterbutton objects-button">Objets</button>
@@ -56,6 +56,17 @@
 		<div class="gallery">
 		</div>
 	</section>
+	<aside class = modal-wrapper>
+		<div id="modal-container">
+			<i class="fas fa-times"></i>
+			<h3>Galerie Photo</h3>
+			<div class="modal-gallery">
+				
+			</div>
+			<button class="submit-button">Ajouter une photo</button>
+			<p href="#">Supprimer la galerie</p>
+		</div>
+	</aside>
 	<section id="contact">
 		<h2>Contact</h2>
 		<p>Vous avez un projet ? Discutons-en !</p>
@@ -69,8 +80,6 @@
 			<input type="submit" value="Envoyer">
 		</form>
 	</section>
-</main>
-
 <footer>
 	<nav>
 		<ul>
@@ -80,6 +89,6 @@
 </footer>
 <script src="script.js"></script>
 <script src="login.js"></script>
-<script src="modal.js"></script>
+<script type="module" src="modal.js"></script>
 </body>
 </html>
