--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -24,8 +24,8 @@
 		<ul>
 			<li><a href=index.html>projets</a></li>
 			<li><a href=#contact>contact</a></li>
-			<li id="login-btn"><a href=login.html>login</a></li>
-			<li id="logout-btn">logout</a></li>
+			<li id="login-btn"><a href=./login.html>login</a></li>
+			<li id="logout-btn"><a href=./index.html>logout</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -35,10 +35,10 @@
 	<section id="introduction">
 		<figure id ="introduction-image">
 			<img src="./assets/images/sophie-bluel.png" alt="">
-			<a class="editor-content edit-link-a" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
+			<a class="editor-content js-modal" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
 		</figure>
 		<article>
-			<a  class="editor-content edit-link-c" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
+			<a  href="#" class="editor-content js-modal"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
 			<h2>Designer d'espace</h2>
 			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
@@ -46,7 +46,7 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets<a  class="editor-content edit-link-b" href="#modal-container"><i class="fa-solid fa-pen-to-square"></i>Modifier</a></h2>
+		<h2>Mes Projets<a href="#modal1" class="editor-content js-modal"><i class="fa-solid fa-pen-to-square"></i>Modifier</a></h2>
 		<div class = filterbar>
 		<button class="filterbutton all-button">Tous</button>
 		<button class="filterbutton objects-button">Objets</button>
@@ -56,8 +56,8 @@
 		<div class="gallery">
 		</div>
 	</section>
-	<aside class = modal-wrapper>
-		<div id="modal-container">
+	<aside id = "modal1" class = "modal-wrapper" aria-hidden="true" role="dialog" aria-labelledby="modal-title" style="display:none">
+		<div id="modal-container" class="js-modal-stop">
 			<i class="fas fa-times"></i>
 			<h3>Galerie Photo</h3>
 			<div class="modal-gallery">
@@ -80,6 +80,20 @@
 			<input type="submit" value="Envoyer">
 		</form>
 	</section>
+
+	<aside class = "modal-wrapper-bis">
+		<div id = "add-photo-container">
+			<div id="modal-icons">
+			<i class="fa-sharp fa-solid fa-arrow-left"></i>
+			<i class="fas fa-times"></i>
+			</div>
+			<h3>Ajout photo</h3>
+			<form></form>
+			<button class="add-photo-button">Valider</button>
+		</div>
+	</aside>
+</main>
+
 <footer>
 	<nav>
 		<ul>
