--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -75,18 +75,22 @@
 				<button class= "close-button"><i class="fas fa-times close-js-modal"></i></button>
 			</div>
 			<h3>Ajout photo</h3>
-			<form id="add-photo-form" action='http://localhost:5678/api/works' method="post">
+
+			<form id="add-photo-form">
 				<div class="drag-area">
+					<div class="input-zone">
 					<i class="fa fa-image"></i>
-					<input type="file" id="actual-btn" name="ajouter une photo" value="ajouter une photo"
-					accept="image/png, image/jpeg"style="display:none">
+					<input type="file" id="actual-btn" name="actual-btn"
+					accept=".png, .jpeg" style="display: none;">
 					<label for="actual-btn" class="input-btn">+ Ajouter photo</label>
 					<p class ="add-photo-infos">jpg, png : 4mo max</p>
+					</div>
+					<output class="photo-output-area" style="display:none"></output>
 				</div>
 				<label for="title">Titre</label>
-				<input type="text" name="title" required>
+				<input type="text" name="title" id="title">
 				<label for="category">Catégorie</label>
-				<select id="category-selector" name="category" required><option value=""></option></select>
+				<select id="category-selector" name="category"><option value=""></option></select>
 				<hr>
 				<button class="confirm-photo-button">Valider</button>
 			</form>
