--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,18 +12,18 @@
     <script src="https://kit.fontawesome.com/b932d69e5e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header>
     <div class="editor-content edit-banner">
         <i class="fa-solid fa-pen-to-square"></i>
         <p>Mode édition</p>
         <button id="banner-btn">publier les changements</button>
     </div>
     <div class="editor-content spacer"></div>
+<header>
     <div id="navbar">
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li><a href=index.html>projets</a></li>
+                <li><a href=#portfolio>projets</a></li>
                 <li><a href=#contact>contact</a></li>
                 <li id="login-btn"><a href=./login.html>login</a></li>
                 <li id="logout-btn"><a href=./index.html>logout</a></li>
@@ -36,10 +36,10 @@
     <section id="introduction">
         <figure id ="introduction-image">
             <img src="./assets/images/sophie-bluel.png" alt="">
-            <a class="editor-content open-js-modal" href="#"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
+            <a href="#" class="editor-content edit-link" ><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
         </figure>
         <article>
-            <a  href="#" class="editor-content open-js-modal"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
+            <a  href="#" class="editor-content edit-link"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
             <h2>Designer d'espace</h2>
             <p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
             <p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
@@ -47,25 +47,24 @@
         </article>
     </section>
     <section id="portfolio">
-        <h2>Mes Projets<a href="#modal" class="editor-content open-js-modal"><i class="fa-solid fa-pen-to-square"></i>Modifier</a></h2>
+        <h2>Mes Projets<a href="#modal" class="editor-content edit-link open-js-modal"><i class="fa-solid fa-pen-to-square"></i>Modifier</a></h2>
         <div class = filterbar>
         <button class="filterbutton all-button">Tous</button>
         <button class="filterbutton objects-button">Objets</button>
         <button class="filterbutton appartments-button">Appartements</button>
         <button class="filterbutton hotels-button">Hôtels & restaurants</button>
         </div>
-        <div class="gallery" id="test">
+        <div id="gallery">
         </div>
     </section>
-    <aside id = "modal">
+    <aside id="modal">
         <div id="modal-container">
             <div class= "modal-icons">
-                <button class= "return-button "><i class="fa-sharp fa-solid fa-arrow-left"></i></button>
+                <button class= "return-button"><i class="fa-sharp fa-solid fa-arrow-left"></i></button>
                 <button class= "close-button"><i class="fas fa-times close-js-modal"></i></button>
             </div>
             <h3 id="modal-title">Galerie Photo</h3>
-            <div class="modal-gallery">
-            
+            <div id="modal-gallery">
             </div>
             <button class="add-photo-button">Ajouter une photo</button>
             <p class="delete-gallery-link">Supprimer la galerie</p>
@@ -78,20 +77,21 @@
             <h3>Ajout photo</h3>
 
             <form id="add-photo-form">
-                <div class="preview-area">
-                    <div class="input-zone">
+                <div id="preview-div">
+                    <div id="input-zone">
                     <i class="fa fa-image"></i>
-                    <input type="file" id="actual-btn" class="mandatory-fields" name="actual-btn"
-                    accept=".png, .jpeg" style="display: none;">
-                    <label for="actual-btn" class="input-btn">+ Ajouter photo</label>
-                    <p class ="add-photo-infos">jpg, png : 4mo max</p>
+                    <input type="file" id="photo-input-button" class="mandatory-fields invisible-items" name="photo-input-button"
+                    accept=".png, .jpeg" >
+                    <label for="photo-input-button" id="input-btn">+ Ajouter photo</label>
+                    <p>jpg, png : 4mo max</p>
                     </div>
-                    <output class="photo-output-area" style="display:none"></output>
+                    <output id="image-preview-zone" class="invisible-items"></output>
                 </div>
-                <label for="title-field">Titre</label>
-                <input type="text" id ="title-field" class="mandatory-fields" name="title" required>
+                <p id="file-size-warning" class="red-warning invisible-items">Votre fichier dépasse la taille maximale autorisée.</p>
+                <label for="title">Titre</label>
+                <input type="text" name="title" id="title-field" class="mandatory-fields" required>
                 <label for="category-selector">Catégorie</label>
-                <select id="category-selector" class="mandatory-fields" name="category" required><option label= " "></option></select>
+                <select id="category-selector" name="category" class="mandatory-fields" required><option value=""></option></select>
                 <hr>
                 <button class="confirm-photo-button">Valider</button>
             </form>
@@ -112,7 +112,6 @@
             <input type="submit" value="Envoyer">
         </form>
     </section>
-
 </main>
 
 <footer>
@@ -123,6 +122,8 @@
     </nav>
 </footer>
 <script type="module" src= "./script.js" ></script>
+<script src="./modal.js"></script>
+<script src="./editmode.js"></script>
 </body>
 </html>
 
