--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -38,6 +38,7 @@
                 <input type="email" name="email"/>
                 <label id="login-label" for="password">Mot de passe</label>
                 <input type="password" name="password"/>
+                <p class="red-warning invisible-items">Erreur dans l'identifiant ou le mot de passe</p>
                 <input id="login-submit" type="submit" value="Se connecter"/>
                 <a href="#">Mot de passe oublié</a>
             </form>
