--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -21,10 +21,10 @@
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li><a href=index.html>projets</a></li>
-                <li><a href=#contact>contact</a></li>
-                <li id="login-btn"><a href=login.html>login</a></li>
-                <li id="logout-btn">logout</a></li>
+                <li><a href="index.html">projets</a></li>
+                <li><a href="#contact">contact</a></li>
+                <li id="login-btn"><a href="login.html">login</a></li>
+                <li id="logout-btn">logout</li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
@@ -39,6 +39,7 @@
                 <label id="login-label" for="password">Mot de passe</label>
                 <input type="password" name="password"/>
                 <p class="red-warning invisible-items">Erreur dans l'identifiant ou le mot de passe</p>
+                <!-- Le message d'erreur ci-dessus est généré par le fichier login.js si l'authentification est incorrecte -->
                 <input id="login-submit" type="submit" value="Se connecter"/>
                 <a href="#">Mot de passe oublié</a>
             </form>
@@ -52,6 +53,6 @@
 		</ul>
 	</nav>
 </footer>
-<script type="module" src ="./login.js"></script>
+<script src ="./login.js"></script>
 </body>
 </html>
