changes to HTML files. Better indentation, useless code deleted

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
-</head>
-<body>
-    <header>
-        <div class="edit-banner">
-            <i class="fa-solid fa-pen-to-square"></i>
-            <p>Mode édition</p>
-            <button id="banner-btn">publier les changements</button>
-        </div>
-        <div id="navbar">
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">projets</a></li>
-                <li><a href="#contact">contact</a></li>
-                <li id="login-btn"><a href="login.html">login</a></li>
-                <li id="logout-btn">logout</li>
-                <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-            </ul>
-        </nav>
-        </div>
-    </header>
-    <main>
-        <section id="login">
-            <h2>Log In</h2>
-            <form class="login-form" action="#" method="post">
-                <label id="login-label" for="email">E-mail</label>
-                <input type="email" name="email"/>
-                <label id="login-label" for="password">Mot de passe</label>
-                <input type="password" name="password"/>
-                <p class="red-warning invisible-items">Erreur dans l'identifiant ou le mot de passe</p>
-                <!-- Le message d'erreur ci-dessus est généré par le fichier login.js si l'authentification est incorrecte -->
-                <input id="login-submit" type="submit" value="Se connecter"/>
-                <a href="#">Mot de passe oublié</a>
-            </form>
-        </section>
-    </main>
-</body>
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
-<script src ="./login.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Sophie Bluel - Architecte d'intérieur</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+        <meta name="description" content="">
+        <link rel="stylesheet" href="./assets/style.css">
+    </head>
+    <body>
+        <header>
+            <div class="edit-banner">
+                <i class="fa-solid fa-pen-to-square"></i>
+                <p>Mode édition</p>
+                <button id="banner-btn">publier les changements</button>
+            </div>
+            <div id="navbar">
+            <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">projets</a>
+                    </li>
+                    <li>
+                        <a href="#contact">contact</a>
+                    </li>
+                    <li id="login-btn">
+                        <a href="login.html">login</a>
+                    </li>
+                    <li id="logout-btn">logout</li>
+                    <li>
+                        <img src="./assets/icons/instagram.png" alt="Instagram">
+                    </li>
+                </ul>
+            </nav>
+            </div>
+        </header>
+        <main>
+            <section id="login">
+                <h2>Log In</h2>
+                <form class="login-form">
+                    <label id="login-label" for="email">E-mail</label>
+                    <input type="email" name="email"/>
+                    <label id="login-label" for="password">Mot de passe</label>
+                    <input type="password" name="password"/>
+                    <span class="red-warning invisible-items">Erreur dans l'identifiant ou le mot de passe</span>
+                    <!-- Le message d'erreur ci-dessus est généré par le fichier login.js si l'authentification est incorrecte -->
+                    <input id="login-submit" type="submit" value="Se connecter"/>
+                    <a href="#">Mot de passe oublié</a>
+                </form>
+            </section>
+        </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li>Mentions Légales</li>
+                </ul>
+            </nav>
+        </footer>
+        <script src ="./login.js"></script>
+    </body>
 </html>
