last changes to indentation. Code cleaner and documented. Javascript checked and useless elements deleted

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,13 +51,13 @@
                     <img src="./assets/images/sophie-bluel.png" alt="profile-picture">
                     <a href="#" class="editor-content edit-link" >
                         <i class="fa-solid fa-pen-to-square"></i>
-                        <span>Modifier</span>
+                        <span>modifier</span>
                     </a>
                 </figure>
                 <article>
                     <a  href="#" class="editor-content edit-link">
                         <i class="fa-solid fa-pen-to-square"></i>
-                        <span>Modifier</span>
+                        <span>modifier</span>
                     </a>
                     <h2>Designer d'espace</h2>
                     <p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
@@ -70,20 +70,22 @@
                     <h2>Mes Projets</h2>
                     <a href="#modal" class="editor-content edit-link open-js-modal">
                         <i class="fa-solid fa-pen-to-square"></i>
-                        <span>Modifier</span>
+                        <span>modifier</span>
                     </a>
                 </div>
-                <div id= "filterbar">
+                <div id="filterbar">
                     <button class="filterbutton all-button">Tous</button>
                     <button class="filterbutton objects-button">Objets</button>
                     <button class="filterbutton appartments-button">Appartements</button>
                     <button class="filterbutton hotels-button">Hôtels & restaurants</button>
                 </div>
+                <div id="spacer" class="editor-content">
+                    <!-- Cette div a pour fonction d'espacer le contenu lorsque le mode édition est activé -->
+                </div>
                 <div id="gallery">
                     <!-- L'affichage de la gallerie est permis grâce au fichier script.js -->
                 </div>
             </section>
-
             <section id="contact">
                 <h2>Contact</h2>
                 <p>Vous avez un projet ? Discutons-en !</p>
