changes after HTML W3C test, changes to form in login.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,7 +19,7 @@
                 <p>Mode édition</p>
                 <button id="banner-btn">publier les changements</button>
             </div>
-            <div id="spacer" class="editor-content">
+            <div class="editor-content spacer">
                 <!-- Cette div a pour fonction d'espacer le contenu lorsque le mode édition est activé -->
             </div>
             <div id="navbar">
@@ -79,7 +79,7 @@
                     <button class="filterbutton appartments-button">Appartements</button>
                     <button class="filterbutton hotels-button">Hôtels & restaurants</button>
                 </div>
-                <div id="spacer" class="editor-content">
+                <div class="editor-content spacer">
                     <!-- Cette div a pour fonction d'espacer le contenu lorsque le mode édition est activé -->
                 </div>
                 <div id="gallery">
