--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -43,9 +43,9 @@
                 <h2>Log In</h2>
                 <form class="login-form">
                     <label id="login-label" for="email">E-mail</label>
-                    <input type="email" name="email"/>
+                    <input type="email" name="email" required/>
                     <label id="login-label" for="password">Mot de passe</label>
-                    <input type="password" name="password"/>
+                    <input type="password" name="password" required/>
                     <span class="red-warning invisible-items">Erreur dans l'identifiant ou le mot de passe</span>
                     <!-- Le message d'erreur ci-dessus est généré par le fichier login.js si l'authentification est incorrecte -->
                     <input id="login-submit" type="submit" value="Se connecter"/>
